--- a/LogIn Process/LogIn.html
+++ b/LogIn Process/LogIn.html
@@ -62,12 +62,12 @@
             </div>
 
             <!-- Login Button -->
-            <button 
+            <a href="../Admin Dashboard/Admin Dashboard.html"><button 
                 type="submit" 
                 class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300"
             >
                 <i class="fas fa-sign-in-alt"></i> تسجيل الدخول
-            </button>
+            </button></a>
 
             <!-- Forget Password Link -->
             <p class="mt-4 text-gray-600">
