--- a/Admin Dashboard/Admin Dashboard.html
+++ b/Admin Dashboard/Admin Dashboard.html
@@ -1,148 +1,183 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>لوحة التحكم - Soubai Shop</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>لوحة التحكم - Soubai Shop</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <style>
         body { font-family: 'Tajawal', sans-serif; }
     </style>
-</head>
-<body class="bg-gray-100 text-black flex flex-col min-h-screen">
-    <!-- Mobile Menu Button -->
-    <button id="menu-btn" class="md:hidden fixed top-4 right-4 bg-yellow-400 text-black px-4 py-2 rounded-lg">
-        <i class="fas fa-bars"></i> <!-- Font Awesome Bars Icon -->
-    </button>
-    
-    <!-- Sidebar -->
-    <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
-        <!-- Close Button for Mobile -->
-        <button id="close-btn" class="md:hidden absolute top-4 left-4 bg-red-500 text-white px-2 py-1 rounded-lg">
-            <i class="fas fa-times"></i> <!-- Font Awesome Times Icon -->
+    </head>
+    <body class="bg-gray-100 text-black flex flex-col min-h-screen">
+        <!-- Mobile Menu Button -->
+        <button id="menu-btn"
+            class="md:hidden fixed top-4 right-4 bg-yellow-400 text-black px-4 py-2 rounded-lg">
+            <i class="fas fa-bars"></i> <!-- Font Awesome Bars Icon -->
         </button>
-        <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
-        <nav class="space-y-2">
-            <a href="#dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+
+        <!-- Sidebar -->
+        <div id="sidebar"
+            class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+            <!-- Close Button for Mobile -->
+            <button id="close-btn"
+                class="md:hidden absolute top-4 left-4 bg-red-500 text-white px-2 py-1 rounded-lg">
+                <i class="fas fa-times"></i> <!-- Font Awesome Times Icon -->
+            </button>
+            <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
+            <nav class="space-y-2">
+                <a href="#dashboard"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-tachometer-alt"></i> لوحة التحكم
+                </a>
+                <a href="Orders.html"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-shopping-cart"></i> الطلبات
+                </a>
+                <a href="Clients.html"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-users"></i> العملاء
+                </a>
+                <a href="#products"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-box"></i> المنتجات
+                </a>
+                <a href="#settings"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-cog"></i> إعدادات
+                </a>
+            </nav>
+        </div>
+
+        <!-- Main Content -->
+        <div class="p-6 md:mr-64">
+            <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
                 <i class="fas fa-tachometer-alt"></i> لوحة التحكم
-            </a>
-            <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                <i class="fas fa-shopping-cart"></i> الطلبات
-            </a>
-            <a href="#products" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                <i class="fas fa-box"></i> المنتجات
-            </a>
-            <a href="#settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                <i class="fas fa-cog"></i> إعدادات
-            </a>
-        </nav>
-    </div>
-    
-    <!-- Main Content -->
-    <div class="p-6 md:mr-64">
-        <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-            <i class="fas fa-tachometer-alt"></i> لوحة التحكم
-        </h1>
+            </h1>
 
-        <!-- Stats Cards -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
-            <!-- Total Orders -->
-            <div class="bg-white p-6 rounded-lg shadow">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-gray-500">إجمالي الطلبات</p>
-                        <p class="text-2xl font-bold">120</p>
+            <!-- Stats Cards -->
+            <div
+                class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
+                <!-- Total Orders -->
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <p class="text-gray-500">إجمالي الطلبات</p>
+                            <p class="text-2xl font-bold">120</p>
+                        </div>
+                        <div class="bg-yellow-400 py-1.5 px-2 rounded-full">
+                            <i class="fas fa-shopping-cart text-white"></i>
+                        </div>
                     </div>
-                    <div class="bg-yellow-400 py-1.5 px-2 rounded-full">
-                        <i class="fas fa-shopping-cart text-white"></i>
+                </div>
+
+                <!-- Total Revenue -->
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <p class="text-gray-500">إجمالي الإيرادات</p>
+                            <p class="text-2xl font-bold">$5,000</p>
+                        </div>
+                        <div class="bg-green-500 py-1.5 px-3 rounded-full">
+                            <i class="fas fa-dollar-sign text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Total Customers -->
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <p class="text-gray-500">إجمالي العملاء</p>
+                            <p class="text-2xl font-bold">85</p>
+                        </div>
+                        <div class="bg-blue-500 py-1.5 px-2 rounded-full">
+                            <i class="fas fa-users text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Pending Orders -->
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="flex items-center justify-between">
+                        <div>
+                            <p class="text-gray-500">الطلبات المعلقة</p>
+                            <p class="text-2xl font-bold">12</p>
+                        </div>
+                        <div class="bg-red-500 py-1.5 px-2.5 rounded-full">
+                            <i class="fas fa-exclamation-circle text-white"></i>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Total Revenue -->
-            <div class="bg-white p-6 rounded-lg shadow">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-gray-500">إجمالي الإيرادات</p>
-                        <p class="text-2xl font-bold">$5,000</p>
-                    </div>
-                    <div class="bg-green-500 py-1.5 px-3 rounded-full">
-                        <i class="fas fa-dollar-sign text-white"></i>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Total Customers -->
-            <div class="bg-white p-6 rounded-lg shadow">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-gray-500">إجمالي العملاء</p>
-                        <p class="text-2xl font-bold">85</p>
-                    </div>
-                    <div class="bg-blue-500 py-1.5 px-2 rounded-full">
-                        <i class="fas fa-users text-white"></i>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Pending Orders -->
-            <div class="bg-white p-6 rounded-lg shadow">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-gray-500">الطلبات المعلقة</p>
-                        <p class="text-2xl font-bold">12</p>
-                    </div>
-                    <div class="bg-red-500 py-1.5 px-2.5 rounded-full">
-                        <i class="fas fa-exclamation-circle text-white"></i>
-                    </div>
+            <!-- Recent Orders Table -->
+            <div class="bg-white rounded-lg shadow">
+                <h2 class="p-4 text-xl font-bold text-gray-800">الطلبات
+                    الأخيرة</h2>
+                <div class="overflow-x-auto">
+                    <table class="w-full border-collapse text-right">
+                        <thead>
+                            <tr class="bg-gray-200">
+                                <th class="p-3 border-b whitespace-nowrap">اسم
+                                    العميل</th>
+                                <th class="p-3 border-b whitespace-nowrap">رقم
+                                    الهاتف</th>
+                                <th
+                                    class="p-3 border-b whitespace-nowrap">إجمالي
+                                    الطلب</th>
+                                <th
+                                    class="p-3 border-b whitespace-nowrap">المدينة</th>
+                                <th
+                                    class="p-3 border-b whitespace-nowrap">التاريخ</th>
+                                <th class="p-3 border-b whitespace-nowrap">حالة
+                                    الطلب</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="hover:bg-gray-50">
+                                <td class="p-3 border-b whitespace-nowrap">محمد
+                                    أحمد</td>
+                                <td class="p-3 border-b whitespace-nowrap">+966
+                                    500000000</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">$120.00</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">الرياض</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">2025-02-15</td>
+                                <td class="p-3 border-b whitespace-nowrap">
+                                    <span
+                                        class="bg-yellow-400 text-white px-2 py-1 rounded-lg">قيد
+                                        المعالجة</span>
+                                </td>
+                            </tr>
+                            <tr class="hover:bg-gray-50">
+                                <td class="p-3 border-b whitespace-nowrap">سارة
+                                    خالد</td>
+                                <td class="p-3 border-b whitespace-nowrap">+966
+                                    511111111</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">$75.50</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">جدة</td>
+                                <td
+                                    class="p-3 border-b whitespace-nowrap">2025-02-14</td>
+                                <td class="p-3 border-b whitespace-nowrap">
+                                    <span
+                                        class="bg-green-500 text-white px-2 py-1 rounded-lg">تم
+                                        التوصيل</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
 
-        <!-- Recent Orders Table -->
-        <div class="bg-white rounded-lg shadow">
-            <h2 class="p-4 text-xl font-bold text-gray-800">الطلبات الأخيرة</h2>
-            <div class="overflow-x-auto">
-                <table class="w-full border-collapse text-right">
-                    <thead>
-                        <tr class="bg-gray-200">
-                            <th class="p-3 border-b whitespace-nowrap">اسم العميل</th>
-                            <th class="p-3 border-b whitespace-nowrap">رقم الهاتف</th>
-                            <th class="p-3 border-b whitespace-nowrap">إجمالي الطلب</th>
-                            <th class="p-3 border-b whitespace-nowrap">المدينة</th>
-                            <th class="p-3 border-b whitespace-nowrap">التاريخ</th>
-                            <th class="p-3 border-b whitespace-nowrap">حالة الطلب</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">محمد أحمد</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966 500000000</td>
-                            <td class="p-3 border-b whitespace-nowrap">$120.00</td>
-                            <td class="p-3 border-b whitespace-nowrap">الرياض</td>
-                            <td class="p-3 border-b whitespace-nowrap">2025-02-15</td>
-                            <td class="p-3 border-b whitespace-nowrap">
-                                <span class="bg-yellow-400 text-white px-2 py-1 rounded-lg">قيد المعالجة</span>
-                            </td>
-                        </tr>
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">سارة خالد</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966 511111111</td>
-                            <td class="p-3 border-b whitespace-nowrap">$75.50</td>
-                            <td class="p-3 border-b whitespace-nowrap">جدة</td>
-                            <td class="p-3 border-b whitespace-nowrap">2025-02-14</td>
-                            <td class="p-3 border-b whitespace-nowrap">
-                                <span class="bg-green-500 text-white px-2 py-1 rounded-lg">تم التوصيل</span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <script>
+        <script>
         const menuBtn = document.getElementById('menu-btn');
         const closeBtn = document.getElementById('close-btn');
         const sidebar = document.getElementById('sidebar');
@@ -155,5 +190,5 @@
             sidebar.classList.add('translate-x-full');
         });
     </script>
-</body>
+    </body>
 </html>
