--- a/Admin Dashboard/Clients.html
+++ b/Admin Dashboard/Clients.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>الطلبات - Soubai Shop</title>
+        <title>العملاء - Soubai Shop</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -36,7 +36,8 @@
                     class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-shopping-cart"></i> الطلبات
                 </a>
-                <a href="Clients.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Clients.html"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-users"></i> العملاء
                 </a>
                 <a href="#products"
@@ -53,62 +54,28 @@
         <!-- Main Content -->
         <div class="p-6 md:mr-64">
             <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-shopping-cart"></i> الطلبات
+                <i class="fas fa-users text-yellow-400"></i> العملاء
             </h1>
 
-            <!-- Search Bar and Filters -->
+            <!-- Search Bar and Add Client Button -->
             <div
-                class="flex flex-col md:flex-row justify-between items-center mb-4 gap-2 max-w-screen">
-                <div
-                    class="flex flex-row md:flex-row gap-1 w-full justify-between">
-                    <!-- Search Bar -->
-                    <div class="w-auto ">
-                        <input
-                            type="text"
-                            placeholder="ابحث عن طلب..."
-                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" />
-                    </div>
-                    <!-- City Filter -->
-                    <div class="w-full md:w-1/4">
-                        <select
-                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-                            <option value>جميع المدن</option>
-                            <option value="الرياض">الرياض</option>
-                            <option value="جدة">جدة</option>
-                            <option value="مكة">مكة</option>
-                            <option value="الدمام">الدمام</option>
-                        </select>
-                    </div>
-                    <!-- Date Range Filter -->
-                    <div class="w-full md:w-1/4 flex gap-2">
-                        <input
-                            type="date"
-                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                            placeholder="من تاريخ" />
-                        <input
-                            type="date"
-                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                            placeholder="إلى تاريخ" />
-                    </div>
-                    <!-- Status Filter -->
-                    <div class="w-auto md:w-1/4">
-                        <select
-                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-                            <option value>جميع الحالات</option>
-                            <option value="processing">قيد المعالجة</option>
-                            <option value="shipped">تم الشحن</option>
-                            <option value="delivered">تم التوصيل</option>
-                            <option value="cancelled">ملغي</option>
-                        </select>
-                    </div>
+                class="flex flex-col md:flex-row justify-between items-center mb-4 gap-4">
+                <!-- Search Bar -->
+                <div class="w-full md:w-1/2">
+                    <input
+                        type="text"
+                        placeholder="ابحث عن عميل..."
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
                 </div>
-                <!-- Add New Order Button -->
-                <a href="NewOrder.html"><button
+
+                <!-- Add Client Button -->
+                <a href="NewClient.html"><button
                         class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
-                        <i class="fas fa-plus"></i> إضافة طلب
+                        <i class="fas fa-plus"></i> إضافة عميل
                     </button></a>
             </div>
-            <!-- Orders Table -->
+
+            <!-- Clients Table -->
             <div class="overflow-x-auto bg-white rounded-lg shadow">
                 <table class="w-full border-collapse text-right">
                     <thead>
@@ -117,41 +84,26 @@
                                 العميل</th>
                             <th class="p-3 border-b whitespace-nowrap">رقم
                                 الهاتف</th>
-                            <th class="p-3 border-b whitespace-nowrap">إجمالي
-                                الطلب</th>
+                            <th class="p-3 border-b whitespace-nowrap">البريد
+                                الإلكتروني</th>
                             <th
                                 class="p-3 border-b whitespace-nowrap">المدينة</th>
-                            <th
-                                class="p-3 border-b whitespace-nowrap">التاريخ</th>
-                            <th class="p-3 border-b whitespace-nowrap">حالة
-                                الطلب</th>
                             <th
                                 class="p-3 border-b whitespace-nowrap">الإجراءات</th>
                         </tr>
                     </thead>
                     <tbody>
+                        <!-- Client 1 -->
                         <tr class="hover:bg-gray-50">
                             <td class="p-3 border-b whitespace-nowrap">محمد
                                 أحمد</td>
                             <td class="p-3 border-b whitespace-nowrap">+966
                                 500000000</td>
                             <td
-                                class="p-3 border-b whitespace-nowrap">$120.00</td>
+                                class="p-3 border-b whitespace-nowrap">mohamed@example.com</td>
                             <td
                                 class="p-3 border-b whitespace-nowrap">الرياض</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">2025-02-15</td>
-                            <td class="p-3 border-b whitespace-nowrap">
-                                <select
-                                    class="border p-1 rounded-lg bg-gray-100">
-                                    <option>قيد المعالجة</option>
-                                    <option>تم الشحن</option>
-                                    <option>تم التوصيل</option>
-                                    <option>ملغي</option>
-                                </select>
-                            </td>
-                            <td
-                                class="p-3 border-b text-center flex flex-row gap-2">
+                            <td class="p-3 border-b text-center">
                                 <button
                                     class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
@@ -162,27 +114,60 @@
                                 </button>
                             </td>
                         </tr>
+
+                        <!-- Client 2 -->
                         <tr class="hover:bg-gray-50">
                             <td class="p-3 border-b whitespace-nowrap">سارة
                                 خالد</td>
                             <td class="p-3 border-b whitespace-nowrap">+966
                                 511111111</td>
                             <td
-                                class="p-3 border-b whitespace-nowrap">$75.50</td>
+                                class="p-3 border-b whitespace-nowrap">sara@example.com</td>
                             <td class="p-3 border-b whitespace-nowrap">جدة</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">2025-02-14</td>
-                            <td class="p-3 border-b whitespace-nowrap">
-                                <select
-                                    class="border p-1 rounded-lg bg-gray-100">
-                                    <option>قيد المعالجة</option>
-                                    <option>تم الشحن</option>
-                                    <option>تم التوصيل</option>
-                                    <option>ملغي</option>
-                                </select>
+                            <td class="p-3 border-b text-center">
+                                <button
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                <button
+                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    <i class="fas fa-trash"></i>
+                                </button>
                             </td>
+                        </tr>
+
+                        <!-- Client 3 -->
+                        <tr class="hover:bg-gray-50">
+                            <td class="p-3 border-b whitespace-nowrap">علي
+                                حسن</td>
+                            <td class="p-3 border-b whitespace-nowrap">+966
+                                522222222</td>
                             <td
-                                class="p-3 border-b text-center flex flex-row gap-2">
+                                class="p-3 border-b whitespace-nowrap">ali@example.com</td>
+                            <td class="p-3 border-b whitespace-nowrap">مكة</td>
+                            <td class="p-3 border-b text-center">
+                                <button
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    <i class="fas fa-edit"></i>
+                                </button>
+                                <button
+                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+
+                        <!-- Client 4 -->
+                        <tr class="hover:bg-gray-50">
+                            <td class="p-3 border-b whitespace-nowrap">فاطمة
+                                علي</td>
+                            <td class="p-3 border-b whitespace-nowrap">+966
+                                533333333</td>
+                            <td
+                                class="p-3 border-b whitespace-nowrap">fatima@example.com</td>
+                            <td
+                                class="p-3 border-b whitespace-nowrap">الدمام</td>
+                            <td class="p-3 border-b text-center">
                                 <button
                                     class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
