--- a/Admin Dashboard/Clients.html
+++ b/Admin Dashboard/Clients.html
@@ -40,7 +40,7 @@
                     class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-users"></i> العملاء
                 </a>
-                <a href="#products"
+                <a href="Products.html"
                     class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-box"></i> المنتجات
                 </a>
