--- a/Admin Dashboard/Orders.html
+++ b/Admin Dashboard/Orders.html
@@ -39,7 +39,7 @@
                 <a href="Clients.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-users"></i> العملاء
                 </a>
-                <a href="#products"
+                <a href="Products.html"
                     class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-box"></i> المنتجات
                 </a>
