--- a/Admin Dashboard/Products.html
+++ b/Admin Dashboard/Products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>المنتجات - Belletny</title>
+    <title>المنتجات - Soubai Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -15,6 +15,7 @@
     <button id="menu-btn" class="md:hidden fixed top-4 right-4 bg-yellow-400 text-black px-4 py-2 rounded-lg">
         <i class="fas fa-bars"></i> <!-- Font Awesome Bars Icon -->
     </button>
+    
     
     <!-- Sidebar -->
     <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
