--- a/Admin Dashboard/Admin Dashboard.html
+++ b/Admin Dashboard/Admin Dashboard.html
@@ -13,7 +13,6 @@
     </head>
     <body class="bg-gray-100 text-black flex flex-col min-h-screen">
         <!-- Navbar -->
-        <!-- Navbar -->
         <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
             <div class="container mx-auto flex justify-between items-center">
                 <!-- Burger Menu for Sidebar (Visible on small screens) -->
@@ -25,7 +24,7 @@
                     <i class="fas fa-store"></i> Soubai Shop
                 </div>
                 <!-- Left Side: Notifications and Profile Picture -->
-                <div class="flex flex-row gap-6 items-center space-x-6">
+                <div class="flex flex-row gap-6 items-center space-x-2">
                     <!-- Increased spacing -->
                     <!-- Notifications -->
                     <button class="relative">
@@ -42,7 +41,7 @@
                         </button>
                         <!-- Profile Dropdown -->
                         <div id="profile-dropdown"
-                            class="hidden absolute right-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
+                            class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
                             <a href="#"
                                 class="block px-4 py-2 hover:bg-gray-100">الملف
                                 الشخصي</a>
