--- a/Admin Dashboard/Clients.html
+++ b/Admin Dashboard/Clients.html
@@ -8,15 +8,54 @@
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <style>
-        body { font-family: 'Tajawal', sans-serif; }
+        body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
     </style>
     </head>
     <body class="bg-gray-100 text-black flex flex-col min-h-screen">
-        <!-- Mobile Menu Button -->
-        <button id="menu-btn"
-            class="md:hidden fixed top-4 right-4 bg-yellow-400 text-black px-4 py-2 rounded-lg">
-            <i class="fas fa-bars"></i> <!-- Font Awesome Bars Icon -->
-        </button>
+        <!-- Navbar -->
+        <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
+            <div class="container mx-auto flex justify-between items-center">
+                <!-- Burger Menu for Sidebar (Visible on small screens) -->
+                <button id="menu-btn" class="md:hidden text-white">
+                    <i class="fas fa-bars"></i>
+                </button>
+
+                <!-- Right Side: Shop Name -->
+                <div class="text-xl font-bold">
+                    <i class="fas fa-store"></i> Soubai Shop
+                </div>
+
+                <!-- Left Side: Notifications and Profile Picture -->
+                <div class="flex flex-row gap-6 items-center space-x-2">
+                    <!-- Notifications -->
+                    <button class="relative">
+                        <i class="fas fa-bell"></i>
+                        <span
+                            class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">3</span>
+                    </button>
+
+                    <!-- Profile Picture with Dropdown -->
+                    <div class="relative">
+                        <button id="profile-btn" class="focus:outline-none">
+                            <img src="../download.png" alt="Profile"
+                                class="w-8 h-8 rounded-full">
+                        </button>
+                        <!-- Profile Dropdown -->
+                        <div id="profile-dropdown"
+                            class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
+                            <a href="#"
+                                class="block px-4 py-2 hover:bg-gray-100">الملف
+                                الشخصي</a>
+                            <a href="#"
+                                class="block px-4 py-2 hover:bg-gray-100">الإعدادات</a>
+                            <a href="#"
+                                class="block px-4 py-2 hover:bg-gray-100">تسجيل
+                                الخروج</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
         <!-- Sidebar -->
         <div id="sidebar"
@@ -52,7 +91,7 @@
         </div>
 
         <!-- Main Content -->
-        <div class="p-6 md:mr-64">
+        <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
             <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
                 <i class="fas fa-users text-yellow-400"></i> العملاء
             </h1>
@@ -69,10 +108,12 @@
                 </div>
 
                 <!-- Add Client Button -->
-                <a href="NewClient.html"><button
+                <a href="NewClient.html">
+                    <button
                         class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
                         <i class="fas fa-plus"></i> إضافة عميل
-                    </button></a>
+                    </button>
+                </a>
             </div>
 
             <!-- Clients Table -->
@@ -135,63 +176,36 @@
                                 </button>
                             </td>
                         </tr>
-
-                        <!-- Client 3 -->
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">علي
-                                حسن</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966
-                                522222222</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">ali@example.com</td>
-                            <td class="p-3 border-b whitespace-nowrap">مكة</td>
-                            <td class="p-3 border-b text-center">
-                                <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
-
-                        <!-- Client 4 -->
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">فاطمة
-                                علي</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966
-                                533333333</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">fatima@example.com</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">الدمام</td>
-                            <td class="p-3 border-b text-center">
-                                <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
 
         <script>
+        // Toggle Profile Dropdown
+        const profileBtn = document.getElementById('profile-btn');
+        const profileDropdown = document.getElementById('profile-dropdown');
+
+        profileBtn.addEventListener('click', function() {
+            profileDropdown.classList.toggle('hidden');
+        });
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', function(event) {
+            if (!profileBtn.contains(event.target) && !profileDropdown.contains(event.target)) {
+                profileDropdown.classList.add('hidden');
+            }
+        });
+
+        // Mobile menu toggle
         const menuBtn = document.getElementById('menu-btn');
         const closeBtn = document.getElementById('close-btn');
         const sidebar = document.getElementById('sidebar');
-        
+
         menuBtn.addEventListener('click', function() {
             sidebar.classList.toggle('translate-x-full');
         });
-        
+
         closeBtn.addEventListener('click', function() {
             sidebar.classList.add('translate-x-full');
         });
