--- a/Admin Dashboard/Admin Dashboard.html
+++ b/Admin Dashboard/Admin Dashboard.html
@@ -58,33 +58,26 @@
         </nav>
 
         <!-- Sidebar -->
-        <div id="sidebar"
-            class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
-            <!-- Close Button for Mobile -->
-            <button id="close-btn"
-                class="md:hidden absolute top-4 left-4 bg-red-500 text-white px-2 py-1 rounded-lg">
-                <i class="fas fa-times"></i> <!-- Font Awesome Times Icon -->
-            </button>
+        <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+            <!-- Removed the Close Button for Mobile -->
             <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
             <nav class="space-y-2">
-                <a href="Admin Dashboard.html"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-tachometer-alt"></i> لوحة التحكم
+                <a href="Admin Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
                 </a>
-                <a href="Orders.html"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-shopping-cart"></i> الطلبات
                 </a>
-                <a href="Clients.html"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Clients.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-users"></i> العملاء
                 </a>
-                <a href="Products.html"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Products.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-box"></i> المنتجات
                 </a>
-                <a href="#settings"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Categories.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                    <i class="fas fa-list"></i> الفئات
+                </a>
+                <a href="#settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-cog"></i> إعدادات
                 </a>
             </nav>
@@ -241,15 +234,10 @@
 
         // Mobile menu toggle
         const menuBtn = document.getElementById('menu-btn');
-        const closeBtn = document.getElementById('close-btn');
         const sidebar = document.getElementById('sidebar');
 
         menuBtn.addEventListener('click', function() {
             sidebar.classList.toggle('translate-x-full');
-        });
-
-        closeBtn.addEventListener('click', function() {
-            sidebar.classList.add('translate-x-full');
         });
     </script>
     </body>
