--- a/Admin Dashboard/NewProduct.html
+++ b/Admin Dashboard/NewProduct.html
@@ -50,14 +50,11 @@
 
     <!-- Sidebar -->
     <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
-        <!-- Close Button for Mobile -->
-        <button id="close-btn" class="md:hidden absolute top-4 left-4 bg-red-500 text-white px-2 py-1 rounded-lg">
-            <i class="fas fa-times"></i> <!-- Font Awesome Times Icon -->
-        </button>
+        <!-- Removed the Close Button for Mobile -->
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
             <a href="Admin Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                <i class="fas fa-tachometer-alt"></i> لوحة التحكم
+                <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
             </a>
             <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-shopping-cart"></i> الطلبات
@@ -67,6 +64,9 @@
             </a>
             <a href="Products.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-box"></i> المنتجات
+            </a>
+            <a href="Categories.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-list"></i> الفئات
             </a>
             <a href="#settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-cog"></i> إعدادات
