--- a/Admin Dashboard/Products.html
+++ b/Admin Dashboard/Products.html
@@ -50,14 +50,11 @@
 
     <!-- Sidebar -->
     <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
-        <!-- Close Button for Mobile -->
-        <button id="close-btn" class="md:hidden absolute top-4 left-4 bg-red-500 text-white px-2 py-1 rounded-lg">
-            <i class="fas fa-times"></i> <!-- Font Awesome Times Icon -->
-        </button>
+        <!-- Removed the Close Button for Mobile -->
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
             <a href="Admin Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                <i class="fas fa-tachometer-alt"></i> لوحة التحكم
+                <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
             </a>
             <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-shopping-cart"></i> الطلبات
@@ -67,6 +64,9 @@
             </a>
             <a href="Products.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-box"></i> المنتجات
+            </a>
+            <a href="Categories.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-list"></i> الفئات
             </a>
             <a href="#settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-cog"></i> إعدادات
@@ -133,7 +133,7 @@
                         <td class="p-3 border-b whitespace-nowrap">2023-10-01</td>
                         <td class="p-3 border-b whitespace-nowrap">العناية بالشعر</td>
                         <td class="p-3 border-b text-center">
-                            <button class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                            <button onclick="openUpdateModal('كريم للشعر', 50, '$20.00', 'active', '2023-10-01', 'العناية بالشعر', '../product1.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
                             </button>
                             <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
@@ -160,7 +160,7 @@
                         <td class="p-3 border-b whitespace-nowrap">2023-09-25</td>
                         <td class="p-3 border-b whitespace-nowrap">العناية بالجسم</td>
                         <td class="p-3 border-b text-center">
-                            <button class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                            <button onclick="openUpdateModal('كريم للجسم', 30, '$15.00', 'active', '2023-09-25', 'العناية بالجسم', '../product2.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
                             </button>
                             <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
@@ -170,6 +170,93 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <!-- Update Modal -->
+    <div id="update-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden justify-center items-center">
+        <div class="bg-white rounded-lg shadow-lg p-6 w-11/12 md:w-96">
+            <h2 class="text-xl font-bold text-gray-800 mb-4">تحديث المنتج</h2>
+            <form id="update-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <!-- Name -->
+                <div class="col-span-1 md:col-span-2">
+                    <label for="update-product-name" class="block text-gray-700 mb-2">اسم المنتج</label>
+                    <input
+                        id="update-product-name"
+                        type="text"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                        readonly>
+                </div>
+                <!-- Price -->
+                <div>
+                    <label for="update-product-price" class="block text-gray-700 mb-2">السعر</label>
+                    <input
+                        id="update-product-price"
+                        type="text"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                        required>
+                </div>
+                <!-- Quantity -->
+                <div>
+                    <label for="update-product-quantity" class="block text-gray-700 mb-2">الكمية</label>
+                    <input
+                        id="update-product-quantity"
+                        type="number"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                        required>
+                </div>
+                <!-- Status -->
+                <div>
+                    <label for="update-product-status" class="block text-gray-700 mb-2">الحالة</label>
+                    <select
+                        id="update-product-status"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                        <option value="active">نشط</option>
+                        <option value="inactive">غير نشط</option>
+                        <option value="out_of_stock">غير متوفر</option>
+                    </select>
+                </div>
+                <!-- Date -->
+                <div>
+                    <label for="update-product-date" class="block text-gray-700 mb-2">تاريخ الإضافة</label>
+                    <input
+                        id="update-product-date"
+                        type="date"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                        required>
+                </div>
+                <!-- Category -->
+                <div>
+                    <label for="update-product-category" class="block text-gray-700 mb-2">الفئة</label>
+                    <input
+                        id="update-product-category"
+                        type="text"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                        required>
+                </div>
+                <!-- Image -->
+                <div class="col-span-1 md:col-span-2">
+                    <label for="update-product-image" class="block text-gray-700 mb-2">صورة المنتج</label>
+                    <input
+                        id="update-product-image"
+                        type="file"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                </div>
+                <!-- Buttons -->
+                <div class="col-span-1 md:col-span-2 flex justify-end gap-4">
+                    <button
+                        type="button"
+                        onclick="closeUpdateModal()"
+                        class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-600">
+                        إلغاء
+                    </button>
+                    <button
+                        type="submit"
+                        class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500">
+                        حفظ
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 
@@ -191,15 +278,45 @@
 
         // Mobile menu toggle
         const menuBtn = document.getElementById('menu-btn');
-        const closeBtn = document.getElementById('close-btn');
         const sidebar = document.getElementById('sidebar');
 
         menuBtn.addEventListener('click', function() {
             sidebar.classList.toggle('translate-x-full');
         });
 
-        closeBtn.addEventListener('click', function() {
-            sidebar.classList.add('translate-x-full');
+        // Update Modal Logic
+        const updateModal = document.getElementById('update-modal');
+        const updateForm = document.getElementById('update-form');
+
+        function openUpdateModal(name, quantity, price, status, date, category, image) {
+            document.getElementById('update-product-name').value = name;
+            document.getElementById('update-product-quantity').value = quantity;
+            document.getElementById('update-product-price').value = price;
+            document.getElementById('update-product-status').value = status;
+            document.getElementById('update-product-date').value = date;
+            document.getElementById('update-product-category').value = category;
+            document.getElementById('update-product-image').value = ''; // Clear file input
+            updateModal.classList.remove('hidden');
+        }
+
+        function closeUpdateModal() {
+            updateModal.classList.add('hidden');
+        }
+
+        // Handle form submission
+        updateForm.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const updatedData = {
+                name: document.getElementById('update-product-name').value,
+                quantity: document.getElementById('update-product-quantity').value,
+                price: document.getElementById('update-product-price').value,
+                status: document.getElementById('update-product-status').value,
+                date: document.getElementById('update-product-date').value,
+                category: document.getElementById('update-product-category').value,
+                image: document.getElementById('update-product-image').files[0] || null,
+            };
+            alert(`تم تحديث المنتج: ${JSON.stringify(updatedData, null, 2)}`);
+            closeUpdateModal();
         });
     </script>
 </body>
